--- a/clinic/css/second.css
+++ b/clinic/css/second.css
@@ -122,6 +122,9 @@
   .docs-member__image {
     margin: 0 auto;
   }
+  .docs-member__image img {
+    left: 10%;
+  }
   .docs-member__subway {
     max-width: 129px;
     margin: 15px auto;
@@ -135,5 +138,679 @@
 }
 
 /*--- Prices ---*/
+.list-group-item {
+  position: relative;
+  color: #311C1A;
+  font-size: 2rem;
+  background-color: #C4B0A6;
+  margin: 1px;
+  height: 55px;
+  line-height: 1.8em;
+}
+
+.list-group-item:hover {
+  border: 2px solid #C4B0A6;
+  background: transparent;
+  color: #614B45;
+}
+
+.list-group-item.active {
+  border: 2px solid #C4B0A6;
+  background: transparent;
+  color: #614B45;
+}
+
+.pricelist button {
+  position: relative;
+  width: 100%;
+  color: #311C1A;
+  background: transparent;
+  font-size: 2rem;
+  line-height: 1.2em;
+  border-radius: 0;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.pricelist button:hover, .pricelist button:focus {
+  text-decoration: none;
+  color: #311C1A;
+}
+
+.pricelist .card-header {
+  background-color: #E1D7D3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pricelist .card-header img {
+  width: 15px;
+  color: #000;
+  position: absolute;
+  right: 25px;
+  cursor: pointer;
+}
+
+.pricelist .card-header p {
+  cursor: pointer;
+  color: #9B867E;
+  font-size: 1.3rem;
+  line-height: 0.75em;
+  position: relative;
+}
+
+.pricelist .card-header p::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: #9B867E;
+  bottom: -5px;
+}
+
+.pricelist .card {
+  margin: 1px;
+}
+
+.pricelist {
+  padding-bottom: 125px;
+}
+
+.pricelist-price__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 2px solid #F6F5F7;
+  padding: 5px 0;
+}
+
+.pricelist-price__item:nth-last-child(1) {
+  border-bottom: 0px;
+}
+
+.pricelist-price__item .docs-member__btn {
+  color: #907970;
+  border: 1.5px solid #907970;
+}
+
+.pricelist-price__title {
+  margin-right: auto;
+  margin-left: 20px;
+  font-size: 1.6rem;
+  line-height: 1.8em;
+  font-weight: 300;
+  color: #614B45;
+}
+
+.pricelist-price__price {
+  padding: 5px 12px;
+  border-right: 2px solid #F6F5F7;
+  margin-right: 10px;
+  font-size: 1.8rem;
+  line-height: 1.8em;
+  font-weight: 500;
+  color: #B9A195;
+}
+
+@media (max-width: 1199.98px) {
+  .pricelist .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .pricelist .row .list-group {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .pricelist .row .list-group-item {
+    font-size: 1.6rem;
+    line-height: 1.3em;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pricelist .list-group {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .pricelist .list-group-item {
+    width: 49%;
+  }
+  .pricelist button {
+    font-size: 1.4rem;
+  }
+  .pricelist .list-group-item {
+    font-size: 1.3rem !important;
+    line-height: 1.3em;
+  }
+  .pricelist-price__title {
+    font-size: 1.4rem;
+  }
+  .pricelist-price__price {
+    font-size: 1.6rem;
+    margin-left: 5px;
+  }
+  .pricelist .docs-member__btn {
+    font-size: 1.4rem;
+    max-width: 180px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .pricelist .card-header p {
+    font-size: 1rem;
+  }
+  .pricelist-price__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .pricelist-price__title {
+    margin-right: 25px;
+  }
+  .pricelist-price__price {
+    border-right: none;
+  }
+}
+
 /*--- Services Card ---*/
+.review .docs-member__subway_light {
+  margin-left: 30px;
+}
+
+.img-banner {
+  background-image: url("../img/services-card-bg.png");
+  background-repeat: no-repeat;
+  position: absolute;
+  display: block;
+  width: 47%;
+  height: 669px;
+  right: 0;
+  z-index: 2;
+  margin-top: 26px;
+  border-radius: 20px 0px 0px 20px;
+  overflow: hidden;
+}
+
+.content-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  align-items-padding: 0 10px;
+}
+
+.offer {
+  margin-right: 30px;
+}
+
+.title {
+  font-size: 4.8rem;
+  color: #614B45;
+  max-width: 582px;
+  line-height: 1.2em;
+  margin-bottom: 59px;
+}
+
+.text-scroll {
+  direction: rtl;
+  text-align: left;
+  padding-left: 20px;
+  margin-bottom: 69px;
+  color: #614B45;
+}
+
+.text-scroll {
+  max-width: 582px;
+  height: 210px;
+  overflow: auto;
+  font-size: 1.4rem !important;
+  font-weight: 300 !important;
+  line-height: 1.8em !important;
+}
+
+.description li {
+  list-style: none;
+}
+
+.description .accordion {
+  margin-top: 75px;
+}
+
+.description button {
+  position: relative;
+  width: 100%;
+  color: #311C1A;
+  background: transparent;
+  font-size: 2rem;
+  line-height: 1.2em;
+  border-radius: 0;
+  font-weight: 300;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.description button:hover, .description button:focus {
+  text-decoration: none;
+  color: #311C1A;
+}
+
+.description .card-body {
+  background-color: #F6F5F7;
+  border-radius: 8px !important;
+  padding: 15px 40px;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.8em;
+  color: #311C1A;
+}
+
+.description .card-header {
+  background-color: #E1D7D3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 8px !important;
+  padding: 10px 20px;
+}
+
+.description .card-header img {
+  width: 15px;
+  color: #000;
+  position: absolute;
+  right: 25px;
+  cursor: pointer;
+}
+
+.description .card {
+  margin: 1px;
+  border: 0px;
+}
+
+.effect-procedure .slider {
+  min-width: 0;
+  position: relative;
+}
+
+.effect-procedure .slider-two {
+  width: 50%;
+}
+
+.effect-procedure .slider-two .slick-arrow.slick-next {
+  right: 12%;
+}
+
+.effect-procedure .slider__item__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.effect-procedure .slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.effect-procedure .slider__item {
+  opacity: .9;
+  width: 1194px;
+  margin: 0 50px;
+}
+
+.effect-procedure .slider-two .slider__item {
+  width: 440px;
+}
+
+.effect-procedure .slider__item.slick-active {
+  opacity: 1;
+}
+
+.effect-procedure .slick-dots li {
+  font-size: 0;
+  margin: 0 10px;
+}
+
+.effect-procedure .slick-dots button {
+  font-size: 0;
+  border-radius: 50%;
+  border: 1px solid #B9A195;
+  background: none;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+}
+
+.effect-procedure .slick-active button {
+  background: #B9A195;
+}
+
+.effect-procedure .arrow-slider {
+  width: 34px;
+  height: 40px;
+  background: rgba(144, 121, 112, 0.1);
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.effect-procedure .slider {
+  margin-right: 73px;
+}
+
+.effect-procedure .slick-arrow.slick-next {
+  background: url("../img/next.svg") 0 0/100% no-repeat;
+  background-position: center;
+  right: 18%;
+  top: -150px;
+}
+
+.effect-procedure .slick-arrow.slick-prev {
+  background: url("../img/prev.svg") 0 0/100% no-repeat;
+  background-position: center;
+  right: 21%;
+  top: -150px;
+  z-index: 50;
+}
+
+.effect-procedure .slick-arrow {
+  width: 34px;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  font-size: 0;
+  position: absolute;
+}
+
+#effects-block {
+  margin-top: 125px;
+}
+
+#effect-procedure {
+  margin-top: 125px !important;
+}
+
+#price-block {
+  margin-top: 125px;
+}
+
+#video {
+  margin-top: 75px;
+}
+
+.video-item {
+  margin: 0 auto;
+}
+
+@media (max-width: 1199.98px) {
+  .block-price {
+    width: 100%;
+  }
+  .title-block {
+    font-size: 3.8rem;
+  }
+  .review .content-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .review .img-banner {
+    left: 20%;
+    width: 80%;
+  }
+  .review .banner {
+    margin-bottom: 30px;
+  }
+  .effects-block .block-img {
+    margin-bottom: 30px;
+  }
+  .effects-block .content-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .effect-procedure .content-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .effect-procedure .slider {
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+  .effect-procedure .slick-arrow.slick-next {
+    right: -40% !important;
+  }
+  .effect-procedure .slick-arrow.slick-prev {
+    right: -30%;
+  }
+  .effect-procedure .list-effects {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .review .content-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .review .img-banner {
+    left: 7%;
+    width: 93%;
+  }
+  .review .offer {
+    margin-right: 0;
+    margin-left: 20px;
+  }
+  .review .tegs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .review .tegs .docs-member__subway_double {
+    margin: 15px 30px !important;
+  }
+  .review .tegs .doctors-member__subway_dark {
+    margin: 15px 30px !important;
+  }
+  .review .btn {
+    margin: 0 auto;
+  }
+  .effect-procedure .content-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .effect-procedure .slider {
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+  .effect-procedure .slick-arrow.slick-next {
+    right: -55% !important;
+  }
+  .effect-procedure .slick-arrow.slick-prev {
+    right: -40%;
+  }
+  .effect-procedure .list-effects {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .effect-procedure .slider-two {
+    width: 100%;
+  }
+  .effect-procedure .slider-item {
+    width: 50%;
+  }
+  .effect-procedure .block-img {
+    width: 80% !important;
+  }
+  .effect-procedure .block-img img {
+    width: 60%;
+    margin: 0 auto;
+  }
+  .effect-procedure .text-effect {
+    font-size: 1.6rem;
+    width: 80%;
+  }
+  .effect-procedure .number {
+    width: 35px;
+    height: 35px;
+    font-size: 2.2rem;
+  }
+  .effects-block {
+    margin-bottom: 0;
+    padding-top: 20px;
+  }
+  .effects-block .text-effect {
+    font-size: 1.6rem;
+    width: 80%;
+  }
+  .effects-block .number {
+    width: 35px;
+    height: 35px;
+    font-size: 2.2rem;
+  }
+  .description button {
+    font-size: 1.8rem;
+  }
+  .description .card-body {
+    font-size: 1.5rem;
+    padding: 10px 20px;
+  }
+  .offer {
+    margin-left: 0 !important;
+  }
+  .offer .title {
+    width: 100%;
+  }
+  .offer .text-scroll {
+    width: 100%;
+  }
+  .offer .tegs {
+    width: 100%;
+  }
+  .review .rectangle {
+    max-width: 310px;
+    height: 300px;
+  }
+  .review .img-banner {
+    margin-top: 10px;
+    height: 300px;
+    left: 5%;
+    width: 95%;
+  }
+  #effect-procedure {
+    margin-top: 125px;
+  }
+  .block-title-errow {
+    margin-top: 0 !important;
+  }
+}
+
+@media (max-width: 399.98px) {
+  .price-line {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .price-line .price {
+    border-right: 0px;
+  }
+}
+
+/*--- Header ---*/
+header .phone:hover {
+  text-decoration: none;
+  color: #ffffff !important;
+}
+
+header .call-request {
+  -webkit-transition: 0.4s all ease;
+  transition: 0.4s all ease;
+}
+
+header .call-request:hover {
+  color: #ffffff !important;
+  opacity: 1;
+}
+
+header .maps {
+  -webkit-transition: 0.4s all ease;
+  transition: 0.4s all ease;
+  padding: 0 10px;
+}
+
+header .menu li {
+  -webkit-transition: 0.6s all ease;
+  transition: 0.6s all ease;
+}
+
+header .menu-mobile {
+  display: none;
+}
+
+@media (max-width: 1199.98px) {
+  header .block-nav {
+    display: none;
+  }
+  .menu-mobile {
+    display: block;
+  }
+}
 /*# sourceMappingURL=second.css.map */
